--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -989,6 +989,7 @@ width: auto; height: auto; cursor: pointer;}
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    padding-bottom: 30px;
 }
 @media(max-width: 2560px) {
     .threetechbook ul li img {
