--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -295,9 +295,13 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
     transition: 0.3s all ease-in-out;
     position: relative;
     top: 0;
+    transition: box-shadow 0.3s ease;
+    cursor: pointer;
+    border-radius: 10px;
 }
 .bookFeature ul li:nth-child(1) img:hover, .bookFeature ul li:nth-child(2) img:hover {
     top: -5px;
+    box-shadow: 0 0 20px rgb(111 62 151);
 }
 .productslide .buttonBox .btn {
     font-size: 1.4rem;
