--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -1004,7 +1004,7 @@ width: auto; height: auto; cursor: pointer;}
 .curiousFormSubmit.cfs2 { padding: 0.6rem 1rem; }
 .curiousFormSubmit:hover { background-image: linear-gradient(to bottom, #37378f, #703d95); }
 .curiouscontainerbox {
-    height: 580px;
+    height: 40rem;
     display: flex;
     /* align-items: center; */
     flex-wrap: wrap;
