--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -295,9 +295,12 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
 div#redbook1 {
     text-align: center;
 }
-div#redbook1 svg {
+div#redbook1 {
     width: 60rem !important;
 }
+div#redbook1 svg {
+    width: 100%;
+} 
 .bookFeature ul li:nth-child(1) img, .bookFeature ul li:nth-child(2) img {
     transition: 0.3s all ease-in-out;
     position: relative;
