--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -295,12 +295,12 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
 div#redbook1 {
     text-align: center;
 }
-/* div#redbook1 {
-    max-width: 60rem !important;
+div#redbook1 {
+    width: 60rem !important;
 }
 div#redbook1 svg {
     width: 100%;
-}  */
+} 
 .bookFeature ul li:nth-child(1) img, .bookFeature ul li:nth-child(2) img {
     transition: 0.3s all ease-in-out;
     position: relative;
@@ -1456,5 +1456,9 @@ label.hs-error-msg.hs-main-font-element {
         } 
         .curiouscontainerbox {
             height: auto;
+        }
+        
+        div#redbook1 {
+            width: 100% !important;
         }
 }
