--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -1459,6 +1459,6 @@ label.hs-error-msg.hs-main-font-element {
         }
         
         div#redbook1 {
-            width: 100% !important;
+            width: 30rem !important;
         }
 }
