--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -1065,7 +1065,7 @@ label.hs-error-msg.hs-main-font-element {
 }
 .bookpdfloading {
     min-height: 16rem;
-    background-image: url(../images/loading.gif);
+    background-image: url(../images/loader.gif);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
